qisun-poc/ResourceManager/AzureRM.DNS/v1.0/CmdletMDs/Remove-AzureRmDnsRecordSet.md
---
external help file: Microsoft.Azure.Commands.Dns.dll-Help.xml
online version: .\Get-AzureRmDnsRecordSet.md
schema: 2.0.0
updated_at: 10/15/2016 4:32 AM
ms.date: 10/15/2016
content_git_url: https://github.com/SummerSun/azure-docs-powershell-int/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.DNS/v1.0/CmdletMDs/Remove-AzureRmDnsRecordSet.md
gitcommit: https://github.com/SummerSun/azure-docs-powershell-int/blob/1bfd8e268acfc1799ad3f17c5a982578f54443cf/azureps-cmdlets-docs/ResourceManager/AzureRM.DNS/v1.0/CmdletMDs/Remove-AzureRmDnsRecordSet.md
ms.topic: reference
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, content
manager: visual-studio-china
---

# Remove-AzureRmDnsRecordSet

## SYNOPSIS
Deletes a record set.

## SYNTAX

### Mixed
```
Remove-AzureRmDnsRecordSet -Name <String> -RecordType <RecordType> -Zone <DnsZone> [-Force] [-PassThru]
 [-WhatIf] [-Confirm] [<CommonParameters>]
```

### Fields
```
Remove-AzureRmDnsRecordSet -Name <String> -RecordType <RecordType> -ZoneName <String>
 -ResourceGroupName <String> [-Force] [-PassThru] [-WhatIf] [-Confirm] [<CommonParameters>]
```

### Object
```
Remove-AzureRmDnsRecordSet -RecordSet <DnsRecordSet> [-Overwrite] [-Force] [-PassThru] [-WhatIf] [-Confirm]
 [<CommonParameters>]
```

## DESCRIPTION
The **Remove-AzureRmDnsRecordSet** cmdlet deletes the specified record set from the specified zone.
You cannot delete SOA or name server (NS) records that are automatically created at the zone apex.

You can pass a **RecordSet** object to this cmdlet by using the pipeline operator or as a parameter.
To identify a record set by name and type without using a **RecordSet** object, you must pass the zone as a **DnsZone** object to this cmdlet by using the pipeline operator or as a parameter, or alternatively you can specify the *ZoneName* and *ResourceGroupName* parameters.

You can use the *Confirm* parameter and $ConfirmPreference wps_2 variable to control whether the cmdlet prompts you for confirmation.

When specifying the record set using a **RecordSet** object, the record set is not deleted if it has been changed in azure_2 DNS since the local **RecordSet** object was retrieved.
This provides protection for concurrent changes.
You can suppress this by using the *Overwrite* parameter, which deletes the record set regardless of concurrent changes.

## EXAMPLES

### Example 1: Remove a record set
```
PS C:\> $RecordSet = Get-AzureRmDnsRecordSet -Name "www" -ResourceGroupName "MyResourceGroup" -ZoneName "myzone.com"
PS C:\> Remove-AzureRmDnsRecordSet -RecordSet $RecordSet
```

The first command gets the specified record set, and then stores it in the $RecordSet variable.The second command removes the record set in $RecordSet.

### Example 2: Remove a record set and suppress all confirmation
```
PS C:\> $RecordSet = Get-AzureRmDnsRecordSet -Name "www" -ZoneName "myzone.com" -ResourceGroupName "MyResourceGroup" 
PS C:\> Remove-AzureRmDnsRecordSet -RecordSet $RecordSet -Confirm:$False -Overwrite 

# Alternatively, the record set can be removed as follows.  In this case, 
# because the record set is specified by name rather than by object, the 
# Overwrite parameter is not applicable.

PS C:\> Remove-AzureRmDnsRecordSet -Name "www" -ZoneName "myzone.com" -ResourceGroupName "MyResourceGroup" -Confirm:$False
```

The first command gets the specified record set.

The second command deletes the record set, even if it has changed in the meantime.
Confirmation prompts are suppressed.

## PARAMETERS

### -Force
This parameter is deprecated for this cmdlet.
It will be removed in a future release.

To control whether this cmdlet prompts you for confirmation, use the *Confirm* parameter.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Name
Specifies the name of the **RecordSet** to remove.
When specifying the record set by name, the DNS zone must be specified using either the *Zone* parameter or the *ZoneName* and *ResourceGroupName* parameters.

Alternatively, the record set can be specified using a **RecordSet** object, passed using the *RecordSet* parameter.

```yaml
Type: String
Parameter Sets: Mixed, Fields
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Overwrite
When specifying the record set using a **RecordSet** object, the record set is not deleted if it has been changed in azure_2 DNS since the local **RecordSet** object was retrieved.
This provides protection for concurrent changes.
This can be suppressed using the *Overwrite* parameter, which deletes the record set regardless of concurrent changes.

```yaml
Type: SwitchParameter
Parameter Sets: Object
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -PassThru
passthru

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -RecordSet
Specifies the **RecordSet** object to remove.

Alternatively, the record set can be specified using the *Name* and *Zone* parameters, or using the *Name*, *ZoneName*, and *ResourceGroupName* parameters.

```yaml
Type: DnsRecordSet
Parameter Sets: Object
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -RecordType
Specifies the type of DNS record.

Valid values are: 

- A 
- AAAA
- CNAME
- MX
- NS
- PTR
- SRV 
- TXT

SOA records are deleted automatically when the zone is deleted.
You cannot manually delete SOA records.

```yaml
Type: RecordType
Parameter Sets: Mixed, Fields
Aliases: 
Accepted values: A, AAAA, CNAME, MX, NS, PTR, SOA, SRV, TXT

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -ResourceGroupName
Specifies the resource group that contains the DNS zone that contains the **RecordSet** to delete.
This parameter is applicable only when the record set and DNS zone are specified using the *Name* and *ZoneName* parameters.

Alternatively, you can specify the record set using either the *RecordSet* parameter, or the *Name* and *Zone* parameters.

```yaml
Type: String
Parameter Sets: Fields
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Zone
Specifies the DNS zone that contains the **RecordSet** to delete.
This parameter is applicable only when specifying the record set using the *Name* parameter.

Alternatively, you can specify the record set using either the *RecordSet* parameter, or the *Name*, *ZoneName*, and *ResourceGroupName* parameters.

```yaml
Type: DnsZone
Parameter Sets: Mixed
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -ZoneName
Specifies the name of the zone that contains the **RecordSet** to delete.
You must also specify the *Name* and *ResourceGroupName* parameters.

Alternatively, the record set can be specified using either the *RecordSet* parameter, or the *Name* and *Zone* parameters.

```yaml
Type: String
Parameter Sets: Fields
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Confirm
psdx_confirmdesc

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf
psdx_whatifdesc

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### Microsoft.Azure.Commands.Dns.DnsRecordSet
You can pipe a **RecordSet** object to this cmdlet.

## OUTPUTS

### None
This cmdlet does not generate any output.

## NOTES
* You can use the *Confirm* parameter to control whether this cmdlet prompts you for confirmation. By default, the cmdlet prompts you for confirmation if the $ConfirmPreference wps_2 variable has a value of Medium or lower.

  If you specify *Confirm* or *Confirm:$True*, this cmdlet prompts you for confirmation before it runs.
If you specify *Confirm:$False*, the cmdlet does not prompt you for confirmation.

## RELATED LINKS

[Get-AzureRmDnsRecordSet](.\Get-AzureRmDnsRecordSet.md)

[New-AzureRmDnsRecordSet](.\New-AzureRmDnsRecordSet.md)

[Set-AzureRmDnsRecordSet](.\Set-AzureRmDnsRecordSet.md)

